[Sprint 4] Manage UserDetails Service & UserDetails